--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
     <!-- <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests"> -->
   </head>
   <body>
-    <script
+    <script`
       src="https://widget.cloudinary.com/v2.0/global/all.js"
       type="text/javascript"
     ></script>
